<resources>
    <string name="app_name">Baudit</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_image_content_description">Logo Splash Image</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="account_edit_commit_success">Successfully Committed Account Edits</string>
    <string name="account_edit_commit_failure">Failed to Commit Account Edits</string>
    <string name="assign_patient_scan_failure">Failed to Scan Valid Patient Account</string>
    <string name="patient_account_load_failure">Failed to Load Patient Account</string>
    <string name="care_provider_account_load_failure">Failed to Load Care Provider Account</string>
    <string name="problem_commit_success">Successfully Committed Problem</string>
    <string name="problem_commit_failure">Failed to Commit Problem</string>
    <string name="problem_map_error">Failed to Load Problem Map</string>
    <string name="record_commit_success">Successfully Committed Record</string>
    <string name="record_commit_failure">Failed to Commit Record</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_as_patient">Log in as Patient</string>
    <string name="login_failed">⚠ Authentication error: failed to authenticate into account</string>
    <string name="problem_count">Problems (%1$d):</string>
    <string name="patient_count">Patients (%1$d):</string>
    <string name="home">Home</string>
    <string name="display_qr_code">Display account QR code</string>
    <string name="patient_search_title">Search</string>
    <string name="patient_view_map_title">View Map</string>
    <string name="record_locations">Record locations</string>
    <string name="title_label">Title:</string>
    <string name="date_label">Date:</string>
    <string name="records_label">Records (%1$d):</string>
    <string name="description_label">Description:</string>
    <string name="notifications_label">Notifications:</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="new_problem">New problem</string>
    <string name="edit_problem">Edit problem</string>
    <string name="add">Add</string>
    <string name="commit">Commit</string>
    <string name="edit_account">Edit account</string>
    <string name="test_username">TESTAccount</string>
    <string name="test_email">test@example.com</string>
    <string name="test_patient_name">Firstname Lastname</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="comment_label">Comment:</string>
    <string name="location_label">Location:</string>
    <string name="photos_label">Photos:</string>
    <string name="body_location_label">Body location:</string>
    <string name="keywords_label">Keywords:</string>
    <string name="new_record">New record</string>
    <string name="edit_record">Edit record</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username_with_constraint">Username (8&#8211;20 characters)</string>
    <string name="body_location_template">Body location template</string>
    <string name="upload">Upload</string>
    <string name="body_location_disclaimer">Body location images are full-body images used to indicate the location of
        problems on the body. Please note that these images will be viewable by you primary care provider.
    </string>
    <string name="confirm">Confirm</string>
    <string name="create_account">Create account</string>
    <string name="username_error">⚠ Username must be 8&#8211;20 characters.</string>
    <string name="username_taken_error">⚠ This username is taken.</string>
    <string name="email_error">⚠ Invalid email.</string>
    <string name="phone_number_error">⚠ Invalid phone number.</string>
    <string name="log_out_question">Log out?</string>
    <string name="scan_qr_code">Scan Account QR Code</string>
    <string name="qr_code_usage_tip">Scan this QR code to transfer your Baudit account to another device or Register
        this Baudit account to a Care Provider.
    </string>
    <string name="patient">Patient</string>
    <string name="care_provider">Care provider</string>
    <string name="account_type">Account type</string>
    <string name="identification_minc">Identification (MINC)</string>
    <string name="button_capture_text">Capture</string>
    <string name="content_desc_overlay">Your last photo</string>
    <string name="camera_open_fail">Failed to open camera</string>
    <string name="button_switch_camera">Switch Camera</string>
    <string name="view_problem">View Problem</string>
    <string name="delete_problem_question">Delete problem?</string>
    <string name="view_record">View Record</string>
    <string name="delete_record_question">Delete record?</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="default_title">Add a title</string>
    <string name="default_description">Add a description</string>
    <string name="default_comment">Add a comment</string>
    <string name="update_camera_overlay_error">Failed to update the camera overlay</string>
    <string name="camera_image_commit_success">Successfuly committed image</string>
    <string name="camera_image_commit_failure">Failed to commit image</string>
    <string name="set_body_photo">Set body photo</string>
    <string name="name_label">Name:</string>
    <string name="username_label">Username:</string>
    <string name="problem_count_label">Number of problems:</string>
    <string name="view_account">View account</string>
    <string name="remove_patient">Remove patient</string>
    <string name="remove">Remove</string>
    <string name="remove_patient_question">Remove this patient from your list?</string>
    <string name="account_qr_code">Account QR Code</string>
    <string name="record_photo">Record Photo</string>
    <string name="add_record_photo_button">Add Record Photo Button</string>
    <string name="problem_image">Problem Icon Image</string>
    <string name="record_icon_image">Record Icon Image</string>
    <string name="navigation_header_icon_image">Navigation Header Icon Image</string>
    <string name="problem_map_records_title">Map problem records</string>
    <string name="body_location_photos">Body location photos</string>
    <string name="delete_body_location_question">Delete this body location?</string>
    <string name="new_body_location">New body location</string>
    <string name="start_date_label">Start date:</string>
    <string name="care_provider_remove_patient_failure">Failed to remove Patient</string>
    <string name="delete_problem_failure">Failed to delete Problem</string>
    <string name="problem_load_error">Failed to load Problem</string>
    <string name="record_load_error">Failed to load Record</string>
    <string name="no_photos_to_show">No photos to present in slideshow</string>
    <string name="slideshow_view_error">Failed to load slideshow photos</string>
    <string name="record_photos_slideshow">Record Photos Slideshow</string>
    <string name="delete_record_error">Failed to delete record</string>
    <string name="unpair">Unpair Device</string>
</resources>
