<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/vaporwave_pink"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/patient_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/care_provider_login"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
            android:id="@+id/login_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

    <Button
            android:id="@+id/register_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textSize="14sp"/>

    <Button
            android:id="@+id/scan_qr_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:textColor="@color/dark_grey"/>

    <Button
            android:id="@+id/log_in_other_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_as_patient"
            android:textColor="@android:color/black"/>

</LinearLayout>