<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_margin"
                android:paddingStart="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin"
                android:paddingBottom="80dp">

                <RadioGroup
                    android:id="@+id/account_type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/patient_radio_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_type"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/patient_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient" />

                    <RadioButton
                        android:id="@+id/care_provider_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/care_provider"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/create_account_minc_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/identification_minc"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/create_account_minc_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/dark_grey"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/create_account_first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/create_account_last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_with_constraint"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/create_account_username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_grey"
                    android:maxLength="20" />

                <TextView
                    android:id="@+id/create_account_username_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/create_account_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/create_account_email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/create_account_phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/dark_grey"/>

                <TextView
                    android:id="@+id/create_account_phone_number_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/red" />

                <LinearLayout
                    android:id="@+id/create_account_body_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/body_location_template"
                            android:textStyle="bold"
                            android:textSize="18sp"/>

                        <Button
                            android:id="@+id/create_account_body_location_upload_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upload"
                            android:textColor="@color/dark_grey"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/body_location_disclaimer"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/create_account_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/cancel"
                android:textColor="@color/dark_grey"/>

            <Button
                android:id="@+id/create_account_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/confirm"
                android:textColor="@color/dark_grey"/>

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>